--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
     "redux": "^4.2.0",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.53.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
