--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.9.0",
     "framer-motion": "^6.3.16",
     "mdb-react-ui-kit": "^4.0.0",
     "react": "^18.2.0",
@@ -15,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
     "redux": "^4.2.0",
