--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.1",
     "firebase": "^9.9.0",
     "framer-motion": "^6.3.16",
     "mdb-react-ui-kit": "^4.0.0",
