--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "firebase": "^9.9.0",
     "framer-motion": "^6.3.16",
     "mdb-react-ui-kit": "^4.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-moment": "^1.1.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
